--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.25",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.4.5"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
