--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Node.js, Express and MongoDB Project",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "build": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
     "watch": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
@@ -54,5 +55,8 @@
     "ndb": "^1.1.5",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.5"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
