--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "NODE_ENV=production nodemon server.js",
+    "build:prod": "NODE_ENV=production node server.js",
     "debug": "ndb server.js",
     "watch": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "production": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
