--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-rate-limit": "^5.1.3",
     "helmet": "^4.0.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
     "morgan": "^1.10.0",
