--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "hpp": "^0.2.3",
     "html-to-text": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mapbox-gl": "^1.12.0",
     "mongoose": "^5.9.25",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
@@ -41,6 +42,7 @@
     "pug": "^3.0.0",
     "sharp": "^0.25.4",
     "slugify": "^1.4.5",
+    "stripe": "^8.86.0",
     "validator": "^13.1.1",
     "xss-clean": "^0.1.1"
   },
