--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
@@ -61,6 +62,6 @@
     "prettier": "^2.0.5"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": "^12"
   }
 }
