--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A Node.js, Express and MongoDB Project",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "build": "NODE_ENV=production nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "NODE_ENV=production node server.js",
+    "dev-prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
     "watch": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "production": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
